--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@
         </div>
         
         <img style="visibility:hidden;display:block;" id="basil" src="basil.jpg" width="0" height="0">
+        <img style="visibility:hidden;display:block;" id="red-tet" src="redTetronome.png" width="0" height="0">
+        <img style="visibility:hidden;display:block;" id="purple-tet" src="purpleTetronome.png" width="0" height="0">
+        <img style="visibility:hidden;display:block;" id="green-tet" src="greenTetronome.png" width="0" height="0">
+        <img style="visibility:hidden;display:block;" id="orange-tet" src="orangeTetronome.png" width="0" height="0">
+        <img style="visibility:hidden;display:block;" id="pink-tet" src="pinkTetronome.png" width="0" height="0">
+        <img style="visibility:hidden;display:block;" id="baby-tet" src="babyTetronome.png" width="0" height="0">
+        <img style="visibility:hidden;display:block;" id="yellow-tet" src="yellowTetronome.png" width="0" height="0">
         <audio id="player" loop>
             <source src="audio.mp3" type="audio/mpeg">
         </audio>
